src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternative_Email_RE__c</fullName>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Fax_RE__c</fullName>
        <label>Alternative Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_Account_ID__c</fullName>
        <label>CC Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Contact ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CC_New_Contact_ID__c</fullName>
        <description>CC person organization ID for new person/contact who is taking over from a drop person</description>
        <label>CC New Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_ID__c</fullName>
        <label>CC Person ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Title_Selection__c</fullName>
        <description>CC Available Title Values - Raw from CC. Not intended to be edited in Salesforce. Edits would be directed to Salutation/Title</description>
        <inlineHelpText>CC Available Title Values - Raw from CC. Not intended to be edited in Salesforce. Edits would be directed to Salutation/Title</inlineHelpText>
        <label>CC Title Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Undefined</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Dr</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Mr</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Ms</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Prof</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>blank</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>-</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Ab</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>AdmiralSir</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Adv</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Advocat</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>AirCommodore</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Amar</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Amb</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Arq</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>AssociateProfessor</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Avv</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>AvvProf</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Avvocato</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Baron</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Baroness</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Brigadier</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Brother</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Canon</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>Captain</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>CDR</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Cdre</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Chairman</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete flag used by Jitterbit</description>
        <label>CC To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPGenderId_RE__c</fullName>
        <label>CPGenderId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type_RE__c</fullName>
        <description>Contact Type to categorize contacts within an Account, set by CC Integration.</description>
        <inlineHelpText>Contact Type to categorize contacts within an Account, set by CC Integration.</inlineHelpText>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_RE__c</fullName>
        <label>DOB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deceased_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Access_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotContactSetBy_RE__c</fullName>
        <label>DoNotContactSetBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Rejection_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Rejection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_RE__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Ever_Been_Ranked_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Ever Been Ranked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Contacts in Location</relationshipLabel>
        <relationshipName>Contacts_in_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nice_Letter_Sent_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nice Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoNewslettersSetBy_RE__c</fullName>
        <label>NoNewslettersSetBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Newsletters_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_RE__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnedByUserId_RE__c</fullName>
        <label>OwnedByUserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAPersonKey_RE__c</fullName>
        <label>PAPersonKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhoneAltType_RE__c</fullName>
        <label>PhoneAltType</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name_RE__c</fullName>
        <label>Preferred First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name_RE__c</fullName>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubAtHead_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PubAtHead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PubOffice_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PubOffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking_Status_RE__c</fullName>
        <description>Field for ranking individuals related to an Account, set by CC Integration</description>
        <inlineHelpText>Field for ranking individuals related to an Account, set by CC Integration</inlineHelpText>
        <label>Ranking Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retired_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_RE__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Forename_RE__c</fullName>
        <label>Search Forename</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Surname_RE__c</fullName>
        <label>Search Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperPersonMultipleContact_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SuperPersonMultipleContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_Person_RE__c</fullName>
        <label>Super Person</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainee_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trainee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_RE__c</fullName>
        <label>VAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Call_RE__c</fullName>
        <label>Year Call</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Qual_RE__c</fullName>
        <label>Year Qual</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Silk_RE__c</fullName>
        <label>Year Silk</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <inlineHelpText>Test Description</inlineHelpText>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>studpub_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>studpub</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Role_RE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Chambers_Contact_List</fullName>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type_RE__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>Chambers Contact List</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>